# backend-v2/src/common/types/dto/teamAnswerDto.ts
@@ -1,0 +1,16 @@
+import { AnswerDto } from "./answerDto";
+import { HttpResponseDto } from "./httpResponse";
+import { ChallengeDto } from "./challengeDto";
+
+/**
+ * Team answer DTO.
+ *
+ * @property teamId ID of the team
+ * @property answers Answers of the team
+ */
+export type TeamAnswerDto = {
+  teamId: number;
+  answers: AnswerDto[];
+};
+
+export type TeamAnswerResponseDto = HttpResponseDto<TeamAnswerDto[]>;
